--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Project Configuration
-PROJECT_NAME="LexiSight"
+PROJECT_NAME="LightOnOCR-Service"
 
 # Model Configuration
-MODEL_SOURCE="vllm"
-MODEL_NAME="rednote-hilab/dots.ocr"
+MODEL_SOURCE="huggingface"
+MODEL_NAME="lightonai/LightOnOCR-2-1B"
 MODEL_CACHE_DIR="Model"
 DEVICE="cuda"
 
