--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "LexiSight"
+name = "LightOnOCR-Service"
 version = "0.1.0"
-description = "OCR Microservice"
+description = "OCR Microservice powered by LightOnOCR-2-1B"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -10,16 +10,14 @@ dependencies = [
     "python-multipart",
     "pydantic>=2.0.0",
     "pydantic-settings",
-    "pdf2image",
+    "pypdfium2",
     "python-dotenv",
     "pillow",
     # vllm is provided by the base image in Docker,
     # but listed here for local dev if on Linux/WSL
     "vllm>=0.6.0; sys_platform != 'win32'",
-    "transformers>=4.46.0",
-    "accelerate>=0.26.0",
-    "qwen-vl-utils",
-    "bitsandbytes>=0.49.1",
+    "transformers>=5.0.0",
+    "torch",
 ]
 
 [tool.uv]
